# hoard

./: .gitignore  Cargo.toml  Jenkinsfile
src/: app.rs  error.rs  hoard.rs  main.rs  state.rs
test/res/index_from/success/.hoard/objects/by-name/: item-name-1
test/res/state_from_file/duplicates/: test1.json
test/res/state_from_file/no_objects/: test1.json
test/res/state_from_path/success/path3/: item-name-2
