[package]
name = "hoard"
version = "0.1.0"
authors = ["Stephen Goeppele <s.goeppele.parrish@gmail.com>"]

[dependencies]
clap = "2.32"
failure = "0.1.3"
lazy_static = "1.2"
hex = "0.3"
multi-map = "1.1"
open = "1.2"
pathdiff = "0.1.0"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.8"
walkdir = "2"
